(doc) Added updates on the release note

--- a/documentation/docs/release-notes/0.43.0.md
+++ b/documentation/docs/release-notes/0.43.0.md
@@ -7,10 +7,26 @@
 
 ---
 
-## Updates
-
 ## Developer Updates
-
+- Unit test coverage requirement for pull requests increased from 66% to 75%
+    - New connectors should include unit tests for all classes/modules. Refer to NDAX connector for such unit tests.
+- Global unit test coverage requirement from 42% to 50%
+- Rework of the `uniswap_v3_lp` trading logic reducing complexity [#3999](https://github.com/CoinAlpha/hummingbot/issues/3999)
+- Added throttler to NDAX for better rate limit handling [#3865](https://github.com/CoinAlpha/hummingbot/issues/3865)
+- Removed Avellaneda hanging orders merge logic. Config name: `hanging_orders_aggregation_type` [#3764](https://github.com/CoinAlpha/hummingbot/issues/3764)
+- Refactor Crypto.com connector to use `AsyncThrottler` [#3922](https://github.com/CoinAlpha/hummingbot/pull/3922)
+- Refactor the AscendEX connector to use `AsyncThrottler` [#3889](https://github.com/CoinAlpha/hummingbot/issues/3889)
+- Added test script for Uniswap V3 [#124](https://github.com/CoinAlpha/gateway-api/issues/124)
+- Improve order lifecycle logic in NDAX Connector [#3866](https://github.com/CoinAlpha/hummingbot/issues/3866)
 
 ## Bug Fixes
+- [#3062](https://github.com/CoinAlpha/hummingbot/issues/3062) Fixed various commands on Telegram. **Thanks to [zappra](https://github.com/zappra) for this fix! 🙏**
+- [#2707](https://github.com/CoinAlpha/hummingbot/issues/2707) Fixed the issue where the bot will fail to run when specifying a `custom_api` price source in the Pure Market Making config
+- [#3452](https://github.com/CoinAlpha/hummingbot/issues/3452) Fixed issue on Perpetual Market Making where partial fill leads to creating incorrect profit taking order size
+- [#3604](https://github.com/CoinAlpha/hummingbot/issues/3604) Fixed Binance pair parsing where SC-USDT is not being parsed correctly for Binance connector
+- [#3710](https://github.com/CoinAlpha/hummingbot/issues/3710) Fixed a bug on Perpetual Market Making when both orders are filled, the bot opens a position instead of creating a new set of orders
+- [#3763](https://github.com/CoinAlpha/hummingbot/issues/3763) Fixed a bug on Spot Perpetual Arbitrage where the bot does not look for `min_divergence` after the second arbitrage
+- [#3887](https://github.com/CoinAlpha/hummingbot/issues/3887) Fixed issue with Pure Market Making when the bot does not filter the proposals with invalid prices after it creates the proposals for creating orders
 
+## Other Enhancements
+- The `balance` command is now usable in Telegram [#3701](https://github.com/CoinAlpha/hummingbot/issues/3701) **Thanks to [zappra](https://github.com/zappra) for this contribution! 🙏**
