--- a/documentation/docs/release-notes/0.43.0.md
+++ b/documentation/docs/release-notes/0.43.0.md
@@ -7,26 +7,33 @@
 
 ---
 
+## Simplified Uniswap-v3 LP strategy
+
+In this release, we made some improvements to the Uniswap-v3 LP, which aims to make it easier for Hummingbot users to use compared to its previous version of the strategy.
+
+Read more in our documentation: [Uniswap-v3 LP](/strategies/uniswap-v3-lp)
+
+
 ## Developer Updates
+
 - Unit test coverage requirement for pull requests increased from 66% to 75%
-    - New connectors should include unit tests for all classes/modules. Refer to NDAX connector for such unit tests.
 - Global unit test coverage requirement from 42% to 50%
+- New connectors should include unit tests for all classes/modules. Refer to [NDAX connector](https://github.com/CoinAlpha/hummingbot/tree/master/test/hummingbot/connector/exchange/ndax) for examples of such unit tests
 - Rework of the `uniswap_v3_lp` trading logic reducing complexity [#3999](https://github.com/CoinAlpha/hummingbot/issues/3999)
 - Added throttler to NDAX for better rate limit handling [#3865](https://github.com/CoinAlpha/hummingbot/issues/3865)
-- Removed Avellaneda hanging orders merge logic. Config name: `hanging_orders_aggregation_type` [#3764](https://github.com/CoinAlpha/hummingbot/issues/3764)
 - Refactor Crypto.com connector to use `AsyncThrottler` [#3922](https://github.com/CoinAlpha/hummingbot/pull/3922)
 - Refactor the AscendEX connector to use `AsyncThrottler` [#3889](https://github.com/CoinAlpha/hummingbot/issues/3889)
-- Added test script for Uniswap V3 [#124](https://github.com/CoinAlpha/gateway-api/issues/124)
-- Improve order lifecycle logic in NDAX Connector [#3866](https://github.com/CoinAlpha/hummingbot/issues/3866)
+- Added test script for Uniswap V3 to test all endpoints [#124](https://github.com/CoinAlpha/gateway-api/issues/124)
+- Improved order lifecycle logic in NDAX Connector [#3866](https://github.com/CoinAlpha/hummingbot/issues/3866)
+- Added a component to assist with mocking network activity for connector unit tests [#3947](https://github.com/coinalpha/hummingbot/issues/3947)
+
 
 ## Bug Fixes
-- [#3062](https://github.com/CoinAlpha/hummingbot/issues/3062) Fixed various commands on Telegram. **Thanks to [zappra](https://github.com/zappra) for this fix! 🙏**
+
+- [#3062](https://github.com/CoinAlpha/hummingbot/issues/3062) Fixed various commands on Telegram. This also allows the `balance` command to be executed from the application. **Thanks to [zappra](https://github.com/zappra) for this fix! 🙏**
 - [#2707](https://github.com/CoinAlpha/hummingbot/issues/2707) Fixed the issue where the bot will fail to run when specifying a `custom_api` price source in the Pure Market Making config
 - [#3452](https://github.com/CoinAlpha/hummingbot/issues/3452) Fixed issue on Perpetual Market Making where partial fill leads to creating incorrect profit taking order size
 - [#3604](https://github.com/CoinAlpha/hummingbot/issues/3604) Fixed Binance pair parsing where SC-USDT is not being parsed correctly for Binance connector
 - [#3710](https://github.com/CoinAlpha/hummingbot/issues/3710) Fixed a bug on Perpetual Market Making when both orders are filled, the bot opens a position instead of creating a new set of orders
 - [#3763](https://github.com/CoinAlpha/hummingbot/issues/3763) Fixed a bug on Spot Perpetual Arbitrage where the bot does not look for `min_divergence` after the second arbitrage
 - [#3887](https://github.com/CoinAlpha/hummingbot/issues/3887) Fixed issue with Pure Market Making when the bot does not filter the proposals with invalid prices after it creates the proposals for creating orders
-
-## Other Enhancements
-- The `balance` command is now usable in Telegram [#3701](https://github.com/CoinAlpha/hummingbot/issues/3701) **Thanks to [zappra](https://github.com/zappra) for this contribution! 🙏**
